# ml-orchestrator

./: .gitignore  README.md  debug_test.py  local_test.py  pyproject.toml  requirements.txt  setup.py  test_mnist_local.py
.ml_orchestrator/: local_test_pipeline.json  mnist_classification_pipeline.json
examples/: MNIST Classification Report.html  basic_ml_pipeline.yml  mnist_pipeline.yml
examples/mnist_scripts/: evaluate_pytorch_mnist.py  fetch_mnist.py  generate_mnist_report.py  preprocess_mnist.py  train_pytorch_mnist.py
examples/scripts/: evaluate.py  fetch_data.py  generate_report.py  models.py  preprocess.py  train_model.py  validate_data.py
ml_orchestrator/: __init__.py  cli.py
ml_orchestrator/config/: __init__.py  parser.py  validator.py
ml_orchestrator/core/: __init__.py  dag.py  pipeline.py  state.py  task.py
ml_orchestrator/utils/: __init__.py  exceptions.py  logging.py
