[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-pipeline-orchestrator"
version = "0.1.1"
description = "A lightweight ML pipeline orchestrator"
readme = "README.md"
authors = [{name = "Darshan Rajopadhye", email = "rajopadhye.d@northeastern.edu"}]
license = {text = "MIT"}
dependencies = [
    "PyYAML>=6.0",
    "click>=8.0.0",
    "colorama>=0.4.0",
]
requires-python = ">=3.8"

[project.scripts]
ml-orchestrator = "ml_orchestrator.cli:main"